--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
-
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+}
+body {
+    background-color: #383838;
+    font-family: 'Poppins', sans-serif;
+}
+.content {
+    color: #09FBBA;
+    transition: 1s;
+    height: 100vh;
+}
+h1{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 4rem;
+}
+p{
+    padding: 2rem 5rem;
+}
 /*# sourceMappingURL=style.css.map */
