--- a/style.css
+++ b/style.css
@@ -46,16 +46,28 @@ p{
     display: block;
     transition: 0.5s ease;
 }
+ul{
+    perspective: 500px;
+}
 li {
     color: #292929;
     list-style-type: none;
-    font-size: 1.5rem;
+    font-size: 3.5rem;
     cursor: pointer;
-    padding-left: 5px;
+    line-height: 5rem;
+    transform: rotateY(30deg) scaleX(1.3);
+    transform-origin: left;
+    transition: .3s;
+    text-align: center;
 }
 li:hover {
     background: #292929;
     color: #FCFCFB;
+    transform: rotateY(0deg);
+}
+
+ul:hover li:not(:hover){
+    opacity: .5;
 }
 #side-bar.active {
     left: 0;
